2011-12-14  Andriy Bilous'ko  <arestarh@ukr.net>

	* documentation: enhancement: Added a Ukrainian translation for
	mkvextract's man page.

2011-12-13  Moritz Bunkus  <moritz@bunkus.org>

	* mkvinfo: bug fix: Various elements used to have a space between
	their names and their value's hex dump. In v5.1.0 that space was
	accentally removed. It has been added again. Fix for bug 583.

2011-12-12  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Turn off input file buffering for badly
	interleaved MP4 files.

2011-12-11  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Changed how mkvmerge assigns IDs to tracks in
	source files for Matroska and MP4 files. That way files whose
	headers contain the same ID for multiple tracks will work
	correctly. Fix for bug 681.

2011-12-07  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: enhancement: The VP8 output module will always
	re-derive frame types (key frame vs. non-key frame).

	* mkvmerge: bug fix: VP8 read from AVI could not be put into WebM
	compatible files.

	* mkvmerge: bug fix: Fixed a rare audio type mis-detection of
	MP2/MP3 audio tracks in MPEG program streams causing mkvmerge to
	abort with an error message.

2011-12-04  Nils Maier  <maierman@web.de>

	* mkvmerge, mkvextract: enhancement: Implemented input file
	buffering in mkvmerge and improved/implemented output file
	buffering in other tools.

2011-12-03  Moritz Bunkus  <moritz@bunkus.org>

	* mmg, mkvinfo's GUI: enhancement: Added new icons based on the
	work of Alexandr Grigorcea (see AUTHORS).

	* mmg: bug fix: Fixed a memory leak in mmg's header editor that
	caused the "open file" function to stop working after opening a
	few files. Fix for bug 679.

2011-11-28  Moritz Bunkus  <moritz@bunkus.org>

	* Released v5.1.0.

	* mkvmerge: bug fix: Fixed more timecode handling issues for video
	tracks in MPEG transport streams whose PES packets sometimes don't
	have a timecode.

	* mkvmerge: bug fix: mkvmerge will no longer create folders on